--- a/citations_bib.html
+++ b/citations_bib.html
@@ -1,4 +1,6 @@
-<h1>citations.bib</h1><a name="poe1850system"></a><pre>
+<h1>citations.bib</h1>
+
+<a name="poe1850system"></a><pre>
 @book{<a href="citations.html#poe1850system">poe1850system</a>,
   title = {The System of Dr. Tarr and Prof. Fether},
   author = {Poe, Edgar Allan},
@@ -46,3 +48,48 @@
 }
 </pre>
 
+<a name="zins2013have"></a><pre>
+@article{<a href="citations.html#zins2013have">zins2013have</a>,
+  title = {What have we learnt from our mistakes?},
+  author = {Zins, M},
+  journal = {Diagnostic and interventional imaging},
+  volume = {7},
+  number = {94},
+  pages = {675},
+  year = {2013},
+  publisher = {Elsevier Masson}
+}
+</pre>
+
+<a name="russel2010pearson"></a><pre>
+@inbook{<a href="citations.html#russel2010pearson">russel2010pearson</a>,
+  author = {Russell, Stuart J and Norvig, Peter},
+  title = {Artificial Intelligence-A Modern Approach, Third Edition.},
+  publisher = {Pearson Education New Jersey},
+  year = {2010},
+  address = {Upper Saddle River, New Jersey 07458},
+  pages = {122},
+  edition = {third}
+}
+</pre>
+
+<a name="3354744"></a><pre>
+@misc{<a href="citations.html#3354744">3354744</a>,
+  title = {Informal derivation (and interpretation) of Substitution Rule from Chain Rule?},
+  author = {user1180576 (https://math.stackexchange.com/users/629687/user1180576)},
+  howpublished = {Mathematics Stack Exchange},
+  note = {URL:https://math.stackexchange.com/q/3354744 (version: 2019-09-13)},
+  eprint = {https://math.stackexchange.com/q/3354744},
+  url = {https://math.stackexchange.com/q/3354744}
+}
+</pre>
+
+<a name="shelley2013gutenberg"></a><pre>
+@inbook{<a href="citations.html#shelley2013gutenberg">shelley2013gutenberg</a>,
+  author = {Mary W. Shelley},
+  title = {Frankenstein or, The Modern Prometheus},
+  publisher = {PROJECT GUTENBERG},
+  chapter = {chapter 4},
+  year = {2013}
+}
+</pre>
