--- a/citations.html
+++ b/citations.html
@@ -70,4 +70,66 @@ Walter&nbsp;F Tichy, Paul Lukowicz, Lutz Prechelt, and Ernst&nbsp;A Heinz.
 
 </td>
 </tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="russel2010pearson">1</a>]
+</td>
+<td class="bibtexitem">
+Stuart&nbsp;J Russell and Peter Norvig.
+ <em>Artificial Intelligence-A Modern Approach, Third Edition.</em>, page
+  122.
+ Pearson Education New Jersey, Upper Saddle River, New Jersey 07458,
+  third edition, 2010.
+[&nbsp;<a href="citations_bib.html#russel2010pearson">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="shelley2013gutenberg">2</a>]
+</td>
+<td class="bibtexitem">
+Mary&nbsp;W. Shelley.
+ <em>Frankenstein or, The Modern Prometheus</em>, chapter chapter 4.
+ PROJECT GUTENBERG, 2013.
+[&nbsp;<a href="citations_bib.html#shelley2013gutenberg">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="3354744">3</a>]
+</td>
+<td class="bibtexitem">
+user1180576 (https://math.stackexchange.com/users/629687/user1180576).
+ Informal derivation (and interpretation) of substitution rule from
+  chain rule?
+ Mathematics Stack Exchange.
+ URL:https://math.stackexchange.com/q/3354744 (version: 2019-09-13).
+[&nbsp;<a href="citations_bib.html#3354744">bib</a>&nbsp;| 
+<a href="http://arxiv.org/abs/https://math.stackexchange.com/q/3354744">arXiv</a>&nbsp;| 
+<a href="https://math.stackexchange.com/q/3354744">http</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zins2013have">4</a>]
+</td>
+<td class="bibtexitem">
+M&nbsp;Zins.
+ What have we learnt from our mistakes?
+ <em>Diagnostic and interventional imaging</em>, 7(94):675, 2013.
+[&nbsp;<a href="citations_bib.html#zins2013have">bib</a>&nbsp;]
+
+</td>
+</tr>
 </table>
