--- a/two.html
+++ b/two.html
@@ -915,7 +915,7 @@ M&nbsp;Zins.
 <div id="text-footnotes">
 
 <div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><p class="footpara">
-To report any mistakes or contact, send an email with the appropriate subject to <i>simurgh9(at)pm.me</i>.
+To report any mistakes or contact me, send an email with the appropriate subject to <i>simurgh9(at)pm.me</i>.
 </p></div></div>
 
 <div class="footdef"><sup><a id="fn.2" class="footnum" href="#fnr.2">2</a></sup> <div class="footpara"><p class="footpara">
